jenkins-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jenkins-dev
  labels:
    env: dev
