jenkins-net.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: dev-net
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          io.kompose.network/dev-net: "true"
  podSelector:
    matchLabels:
      io.kompose.network/dev-net: "true"
